tests/paczka1/fuzzy1/51497810.err
Error in line 1: YIZejhI A100 97,7
Error in line 7: HPc A875 262,66
Error in line 4: A562 A875 9,5
Error in line 5: HPc A875 68,2
Error in line 22: ZyCVZewo8Hz A875 63,2
Error in line 24: ZyCVZewo8Hz A115 9,8
Error in line 21: OFY0P A100 97,0
Error in line 20: HPc A115 22,5
Error in line 27: HPc A875 12,0
Error in line 31: HPc A115 76,5
Error in line 9: p8Lm A115 24,7
